force-app/main/default/objects/Research__c/Research__c.object-meta.xml
<CustomObject>
    <label>Research</label>
    <nameField>
        <displayFormat>R-{YYYY}{MM}{DD}{00000000}</displayFormat>
        <label>Research Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Researches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>