force-app/main/default/objects/Research__c/fields/DisplayUnits__c.field-meta.xml
<CustomField>
    <fullName>DisplayUnits__c</fullName>
    <label>Display Units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>