force-app/main/default/objects/Research__c/fields/Gridding__c.field-meta.xml
<CustomField>
    <fullName>Gridding__c</fullName>
    <formula>Shop__r.Grid__r.Name</formula>
    <label>Gridding</label>
    <type>Text</type>
</CustomField>