force-app/main/default/objects/Research__c/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <label>Months</label>
    <length>255</length>
    <type>Text</type>
</CustomField>