force-app/main/default/objects/Research__c/fields/ReportConfiguration__c.field-meta.xml
<CustomField>
    <fullName>ReportConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Configuration</label>
    <referenceTo>ReportConfigurationInformation__c</referenceTo>
    <relationshipLabel>Researches</relationshipLabel>
    <relationshipName>Researches</relationshipName>
    <type>Lookup</type>
</CustomField>