force-app/main/default/objects/Research__c/fields/ReportConfigurationItem__c.field-meta.xml
<CustomField>
    <fullName>ReportConfigurationItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report Configuration Item</label>
    <referenceTo>ReportConfigurationItem__c</referenceTo>
    <relationshipLabel>Researches</relationshipLabel>
    <relationshipName>Researches</relationshipName>
    <type>Lookup</type>
</CustomField>