force-app/main/default/objects/Research__c/fields/Shop__c.field-meta.xml
<CustomField>
    <fullName>Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>Researches</relationshipLabel>
    <relationshipName>Researches</relationshipName>
    <type>Lookup</type>
</CustomField>